output/cs407projectParser.java
// $ANTLR 3.4 D:\\Compiler\\lap\\Resources\\cs407project.g 2018-05-01 16:24:00

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class cs407projectParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ClassDeclaration", "Expr1", "Expression", "Goal", "INT", "Identifier", "Lf", "MainClass", "MethodDeclaration", "Operation", "Statement", "Type", "VarDeclaration", "WS", "'!'", "'('", "')'", "','", "'.'", "';'", "'='", "'String'", "'System.out.println'", "'['", "']'", "'boolean'", "'class'", "'else'", "'extends'", "'false'", "'if'", "'int'", "'length'", "'main'", "'new'", "'public'", "'return'", "'static'", "'this'", "'true'", "'void'", "'while'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int COMMENT=4;
    public static final int ClassDeclaration=5;
    public static final int Expr1=6;
    public static final int Expression=7;
    public static final int Goal=8;
    public static final int INT=9;
    public static final int Identifier=10;
    public static final int Lf=11;
    public static final int MainClass=12;
    public static final int MethodDeclaration=13;
    public static final int Operation=14;
    public static final int Statement=15;
    public static final int Type=16;
    public static final int VarDeclaration=17;
    public static final int WS=18;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public cs407projectParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public cs407projectParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return cs407projectParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Compiler\\lap\\Resources\\cs407project.g"; }


    	protected void mismatch(IntStream input, int ttype, BitSet follow)throws RecognitionException {
    	throw new MismatchedTokenException(ttype, input);
    	}
    	public Object recoverFromMismatchedSet(IntStream input,
    	RecognitionException e, BitSet follow)	throws RecognitionException {
    	throw e;
    	}


    public static class goal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "goal"
    // D:\\Compiler\\lap\\Resources\\cs407project.g:35:1: goal : mainClass ( classDeclaration )* -> ^( Goal mainClass ( classDeclaration )* ) ;
    public final cs407projectParser.goal_return goal() throws RecognitionException {
        cs407projectParser.goal_return retval = new cs407projectParser.goal_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        cs407projectParser.mainClass_return mainClass1 =null;

        cs407projectParser.classDeclaration_return classDeclaration2 =null;


        RewriteRuleSubtreeStream stream_mainClass=new RewriteRuleSubtreeStream(adaptor,"rule mainClass");
        RewriteRuleSubtreeStream stream_classDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule classDeclaration");
        try {
            // D:\\Compiler\\lap\\Resources\\cs407project.g:35:6: ( mainClass ( classDeclaration )* -> ^( Goal mainClass ( classDeclaration )* ) )
            // D:\\Compiler\\lap\\Resources\\cs407project.g:35:8: mainClass ( classDeclaration )*
            {
            pushFollow(FOLLOW_mainClass_in_goal67);
            mainClass1=mainClass();

            state._fsp--;

            stream_mainClass.add(mainClass1.getTree());

            // D:\\Compiler\\lap\\Resources\\cs407project.g:35:18: ( classDeclaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==31) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\cs407project.g:35:18: classDeclaration
            	    {
            	    pushFollow(FOLLOW_classDeclaration_in_goal69);
            	    classDeclaration2=classDeclaration();

            	    state._fsp--;

            	    stream_classDeclaration.add(classDeclaration2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: mainClass, classDeclaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:2: -> ^( Goal mainClass ( classDeclaration )* )
            {
                // D:\\Compiler\\lap\\Resources\\cs407project.g:36:5: ^( Goal mainClass ( classDeclaration )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(Goal, "Goal")
                , root_1);

                adaptor.addChild(root_1, stream_mainClass.nextTree());

                // D:\\Compiler\\lap\\Resources\\cs407project.g:36:22: ( classDeclaration )*
                while ( stream_classDeclaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_classDeclaration.nextTree());

                }
                stream_classDeclaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
         
        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "goal"


    public static class mainClass_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mainClass"
    // D:\\Compiler\\lap\\Resources\\cs407project.g:38:1: mainClass : 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}' -> ^( MainClass 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}' ) ;
    public final cs407projectParser.mainClass_return mainClass() throws RecognitionException {
        cs407projectParser.mainClass_return retval = new cs407projectParser.mainClass_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal3=null;
        Token Identifier4=null;
        Token char_literal5=null;
        Token string_literal6=null;
        Token string_literal7=null;
        Token string_literal8=null;
        Token string_literal9=null;
        Token char_literal10=null;
        Token string_literal11=null;
        Token char_literal12=null;
        Token char_literal13=null;
        Token Identifier14=null;
        Token char_literal15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Token char_literal19=null;
        cs407projectParser.statement_return statement17 =null;


        Object string_literal3_tree=null;
        Object Identifier4_tree=null;
        Object char_literal5_tree=null;
        Object string_literal6_tree=null;
        Object string_literal7_tree=null;
        Object string_literal8_tree=null;
        Object string_literal9_tree=null;
        Object char_literal10_tree=null;
        Object string_literal11_tree=null;
        Object char_literal12_tree=null;
        Object char_literal13_tree=null;
        Object Identifier14_tree=null;
        Object char_literal15_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        Object char_literal19_tree=null;
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // D:\\Compiler\\lap\\Resources\\cs407project.g:39:2: ( 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}' -> ^( MainClass 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}' ) )
            // D:\\Compiler\\lap\\Resources\\cs407project.g:39:4: 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}'
            {
            string_literal3=(Token)match(input,31,FOLLOW_31_in_mainClass91);  
            stream_31.add(string_literal3);


            Identifier4=(Token)match(input,Identifier,FOLLOW_Identifier_in_mainClass93);  
            stream_Identifier.add(Identifier4);


            char_literal5=(Token)match(input,47,FOLLOW_47_in_mainClass95);  
            stream_47.add(char_literal5);


            string_literal6=(Token)match(input,40,FOLLOW_40_in_mainClass97);  
            stream_40.add(string_literal6);


            string_literal7=(Token)match(input,42,FOLLOW_42_in_mainClass99);  
            stream_42.add(string_literal7);


            string_literal8=(Token)match(input,45,FOLLOW_45_in_mainClass101);  
            stream_45.add(string_literal8);


            string_literal9=(Token)match(input,38,FOLLOW_38_in_mainClass103);  
            stream_38.add(string_literal9);


            char_literal10=(Token)match(input,20,FOLLOW_20_in_mainClass105);  
            stream_20.add(char_literal10);


            string_literal11=(Token)match(input,26,FOLLOW_26_in_mainClass107);  
            stream_26.add(string_literal11);


            char_literal12=(Token)match(input,28,FOLLOW_28_in_mainClass109);  
            stream_28.add(char_literal12);


            char_literal13=(Token)match(input,29,FOLLOW_29_in_mainClass110);  
            stream_29.add(char_literal13);


            Identifier14=(Token)match(input,Identifier,FOLLOW_Identifier_in_mainClass112);  
            stream_Identifier.add(Identifier14);


            char_literal15=(Token)match(input,21,FOLLOW_21_in_mainClass114);  
            stream_21.add(char_literal15);


            char_literal16=(Token)match(input,47,FOLLOW_47_in_mainClass116);  
            stream_47.add(char_literal16);


            // D:\\Compiler\\lap\\Resources\\cs407project.g:39:98: ( statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==Identifier||LA2_0==27||LA2_0==35||(LA2_0 >= 46 && LA2_0 <= 47)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\cs407project.g:39:98: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_mainClass118);
            	    statement17=statement();

            	    state._fsp--;

            	    stream_statement.add(statement17.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            char_literal18=(Token)match(input,48,FOLLOW_48_in_mainClass121);  
            stream_48.add(char_literal18);


            char_literal19=(Token)match(input,48,FOLLOW_48_in_mainClass124);  
            stream_48.add(char_literal19);


            // AST REWRITE
            // elements: Identifier, 20, 26, 45, 47, 48, 40, 38, 31, Identifier, 29, 28, 21, statement, 48, 47, 42
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 40:2: -> ^( MainClass 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}' )
            {
                // D:\\Compiler\\lap\\Resources\\cs407project.g:40:5: ^( MainClass 'class' Identifier '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' Identifier ')' '{' ( statement )* '}' '}' )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(MainClass, "MainClass")
                , root_1);

                adaptor.addChild(root_1, 
                stream_31.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_Identifier.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_47.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_40.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_42.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_45.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_38.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_20.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_26.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_28.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_29.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_Identifier.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_21.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_47.nextNode()
                );

                // D:\\Compiler\\lap\\Resources\\cs407project.g:40:110: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_1, 
                stream_48.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_48.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
         
        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mainClass"


    public static class classDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classDeclaration"
    // D:\\Compiler\\lap\\Resources\\cs407project.g:42:1: classDeclaration : 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}' -> ^( ClassDeclaration 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}' ) ;
    public final cs407projectParser.classDeclaration_return classDeclaration() throws RecognitionException {
        cs407projectParser.classDeclaration_return retval = new cs407projectParser.classDeclaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal20=null;
        Token Identifier21=null;
        Token string_literal22=null;
        Token Identifier23=null;
        Token char_literal24=null;
        Token char_literal27=null;
        cs407projectParser.varDeclaration_return varDeclaration25 =null;

        cs407projectParser.methodDeclaration_return methodDeclaration26 =null;


        Object string_literal20_tree=null;
        Object Identifier21_tree=null;
        Object string_literal22_tree=null;
        Object Identifier23_tree=null;
        Object char_literal24_tree=null;
        Object char_literal27_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleSubtreeStream stream_methodDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule methodDeclaration");
        RewriteRuleSubtreeStream stream_varDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule varDeclaration");
        try {
            // D:\\Compiler\\lap\\Resources\\cs407project.g:43:2: ( 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}' -> ^( ClassDeclaration 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}' ) )
            // D:\\Compiler\\lap\\Resources\\cs407project.g:43:4: 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}'
            {
            string_literal20=(Token)match(input,31,FOLLOW_31_in_classDeclaration174);  
            stream_31.add(string_literal20);


            Identifier21=(Token)match(input,Identifier,FOLLOW_Identifier_in_classDeclaration176);  
            stream_Identifier.add(Identifier21);


            // D:\\Compiler\\lap\\Resources\\cs407project.g:43:25: ( 'extends' Identifier )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==33) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // D:\\Compiler\\lap\\Resources\\cs407project.g:43:26: 'extends' Identifier
                    {
                    string_literal22=(Token)match(input,33,FOLLOW_33_in_classDeclaration181);  
                    stream_33.add(string_literal22);


                    Identifier23=(Token)match(input,Identifier,FOLLOW_Identifier_in_classDeclaration183);  
                    stream_Identifier.add(Identifier23);


                    }
                    break;

            }


            char_literal24=(Token)match(input,47,FOLLOW_47_in_classDeclaration187);  
            stream_47.add(char_literal24);


            // D:\\Compiler\\lap\\Resources\\cs407project.g:43:53: ( varDeclaration )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==Identifier||LA4_0==30||LA4_0==36) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\cs407project.g:43:53: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_classDeclaration189);
            	    varDeclaration25=varDeclaration();

            	    state._fsp--;

            	    stream_varDeclaration.add(varDeclaration25.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            // D:\\Compiler\\lap\\Resources\\cs407project.g:43:69: ( methodDeclaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==40) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\Compiler\\lap\\Resources\\cs407project.g:43:69: methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_classDeclaration192);
            	    methodDeclaration26=methodDeclaration();

            	    state._fsp--;

            	    stream_methodDeclaration.add(methodDeclaration26.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            char_literal27=(Token)match(input,48,FOLLOW_48_in_classDeclaration195);  
            stream_48.add(char_literal27);


            // AST REWRITE
            // elements: 31, varDeclaration, 47, Identifier, 33, Identifier, methodDeclaration, 48
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 44:2: -> ^( ClassDeclaration 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}' )
            {
                // D:\\Compiler\\lap\\Resources\\cs407project.g:44:5: ^( ClassDeclaration 'class' Identifier ( 'extends' Identifier )? '{' ( varDeclaration )* ( methodDeclaration )* '}' )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(ClassDeclaration, "ClassDeclaration")
                , root_1);

                adaptor.addChild(root_1, 
                stream_31.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_Identifier.nextNode()
                );

                // D:\\Compiler\\lap\\Resources\\cs407project.g:44:45: ( 'extends' Identifier )?
                if ( stream_Identifier.hasNext()||stream_33.hasNext() ) {
                    adaptor.addChild(root_1, 
                    stream_33.nextNode()
                    );

                    adaptor.addChild(root_1, 
                    stream_Identifier.nextNode()
                    );

                }
                stream_Identifier.reset();
                stream_33.reset();

                adaptor.addChild(root_1, 
                stream_47.nextNode()
                );

                // D:\\Compiler\\lap\\Resources\\cs407project.g:44:73: ( varDeclaration )*
                while ( stream_varDeclaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_varDeclaration.nextTree());

                }
                stream_varDeclaration.reset();

                // D:\\Compiler\\lap\\Resources\\cs407project.g:44:89: ( methodDeclaration )*
                while ( stream_methodDeclaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_methodDeclaration.nextTree());

                }
                stream_methodDeclaration.reset();

                adaptor.addChild(root_1, 
                stream_48.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
         
        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classDeclaration"


    public static class varDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "varDeclaration"
    // D:\\Compiler\\lap\\Resources\\cs407project.g:46:1: varDeclaration : type Identifier ';' -> ^( VarDeclaration type Identifier ';' ) ;
    public final cs407projectParser.varDeclaration_return varDeclaration() throws RecognitionException {
        cs407projectParser.varDeclaration_return retval = new cs407projectParser.varDeclaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token Identifier29=null;
        Token char_literal30=null;
        cs407projectParser.type_return type28 =null;


        Object Identifier29_tree=null;
        Object char_literal30_tree=null;
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // D:\\Compiler\\lap\\Resources\\cs407project.g:46:16: ( type Identifier ';' -> ^( VarDeclaration type Identifier ';' ) )
            // D:\\Compiler\\lap\\Resources\\cs407project.g:46:18: type Identifier ';'
            {
            pushFollow(FOLLOW_type_in_varDeclaration233);
            type28=type();

            state._fsp--;

            stream_type.add(type28.getTree());

            Identifier29=(Token)match(input,Identifier,FOLLOW_Identifier_in_varDeclaration235);  
            stream_Identifier.add(Identifier29);


            char_literal30=(Token)match(input,24,FOLLOW_24_in_varDeclaration237);  
            stream_24.add(char_literal30);


            // AST REWRITE
            // elements: type, Identifier, 24
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:2: -> ^( VarDeclaration type Identifier ';' )
            {
                // D:\\Compiler\\lap\\Resources\\cs407project.g:47:5: ^( VarDeclaration type Identifier ';' )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(VarDeclaration, "VarDeclaration")
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_Identifier.nextNode()
                );

                adaptor.addChild(root_1, 
                stream_24.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
         
        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "varDeclaration"


    public static class methodDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "methodDeclaration"
    // D:\\Compiler\\lap\\Resources\\cs407project.g:49:1: methodDeclaration : 'public' type Identifier '(' ( type Identifier ( ',' type Identifier )* )? ')' '{' ( varDeclaration )* ( statement )* 'return' expression ';' '}' -> ^( MethodDeclaration 'public' type Identifier '(' ( type Identifier ( ',' type Identifier )* )? ')' '{' ( varDeclaration )* ( statement )* 'return' expression ';' '}' ) ;
    public final cs407projectParser.methodDeclaration_return methodDeclaration() throws RecognitionException {
        cs407projectParser.methodDeclaration_return retval = new cs407projectParser.methodDeclaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal31=null;
        Token Identifier33=null;
        Token char_literal34=null;
        Token Identifier36=null;
        Token char_literal37=null;
        Token Identifier39=null;
        Token char_literal40=null;
        Token char_literal41=null;
        Token string_literal44=null;
        Token char_literal46=null;
        Token char_literal47=null;
        cs407projectParser.type_return type32 =null;

        cs407projectParser.type_return type35 =null;

        cs407projectParser.type_return type38 =null;

        cs407projectParser.varDeclaration_return varDeclaration42 =null;

        cs407projectParser.statement_return statement43 =null;

        cs407projectParser.expression_return expression45 =null;


        Object string_literal31_tree=null;
        Object Identifier33_tree=null;
        Object char_literal34_tree=null;
        Object Identifier36_tree=null;
        Object char_literal37_tree=null;
        Object Identifier39_tree=null;
        Object char_literal40_tree=null;
        Object char_literal41_tree=null;
        Object string_literal44_tree=null;
        Object char_literal46_tree=null;
        Object char_literal47_tree=null;
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
